Remove unnecessary commons dependencies
* commons-lang
* commons-collections
* commons-io
* commons-beanutils